[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsmfetch"
version = "0.1.0"
authors = [{ name = "cupcake" }]
description = "Fetches a list"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ads>=0.12.7", "pandas>=3.0.2", "openpyxl>=3.1.5"]

[project.scripts]
vsmfetch = "vsmfetch:main"
